--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ body {
     display: inline-block;
     width: 100%;
     height: 100vh;
-    background-image: url(../img/background.png);
+    background-image: url(../img/backround.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
