--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 body {
+    /* display: inline-block; */
     background-color: #ccc;
 }
 
@@ -10,11 +11,11 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    filter: blur(15px);
+    filter: blur(13px);
 }
 
 .container {
-    display: inline-block;
+    display: inline-block; 
     width: 800px;
     position: absolute;
     top: 50%;
@@ -22,7 +23,7 @@ body {
     transform: translate(-50%, -50%);
 }
     .container > .left {
-        display: inline-block;
+        display: inline-block; 
         width: 40%;
         float: left;
         background-color: #36f;
@@ -36,7 +37,7 @@ body {
         bottom: 20px;
     }
         .container > .left > h1 {
-            display: inline-block;
+            display: inline-block; 
             width: 100%;
             padding: 40px;
             position: relative;
